# minecraft-server-controller

./: .gitignore  Gopkg.toml  Makefile  Pulumi.yaml  README.md  __main__.py  dot.envrc  env.yml.sample  main_test.go  pyproject.toml  serverless.yml
.github/workflows/: deploy.yml
ansible/: hosts  site.yml
ansible/sources/: environments  minecraft_boot  systemd_minecraft.service
timer-lambda/: README.md  env.tmp.json  project.json
timer-lambda/functions/timer/: function.json  main.go  main_test.go
