[tool.poetry]
name = "pulumi-timer-lambda"
version = "0.1.0"
description = ""
authors = ["Naohiro Sakuma <nao.bear@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pulumi_aws = "^0.18.27"
pulumi = "^0.17.28"
ansible = "^2.8"
Jinja2 = "^2.10"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"
bandit = "^1.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
