[tool.poetry]
name = "minecraft-server-controller"
version = "0.1.0"
description = ""
authors = ["Naohiro Sakuma <nao.bear@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ansible = "^2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
